--- a/config/crd/bases/addons.cluster.x-k8s.io_helmchartproxies.yaml
+++ b/config/crd/bases/addons.cluster.x-k8s.io_helmchartproxies.yaml
@@ -279,19 +279,18 @@ spec:
                   RepoURL is the URL of the Helm chart repository.
                   e.g. chart-path oci://repo-url/chart-name as repoURL: oci://repo-url and https://repo-url/chart-name as repoURL: https://repo-url
                 type: string
-              rollingReconciliation:
+              stepSize:
+                anyOf:
+                - type: integer
+                - type: string
                 description: |-
-                  RollingReconciliation is an opt-in feature that allows to define
-                  step-wise reconciliation of HelmReleaseProxy resources on matching
-                  clusters. If undefined, will default to reconciliation for all clusters by
-                  default.
-                properties:
-                  step:
-                    anyOf:
-                    - type: integer
-                    - type: string
-                    x-kubernetes-int-or-string: true
-                type: object
+                  RolloutStepSize is an opt-in feature that defines the step size during
+                  initial rollout of HelmReleaseProxy resources on matching clusters.
+                  Once all existing HelmReleaseProxy resources are ready=true, the next
+                  batch of HelmReleaseProxy resources are reconciled.
+                  If undefined, will default to creating HelmReleaseProxy resources for all
+                  matching clusters.
+                x-kubernetes-int-or-string: true
               tlsConfig:
                 description: TLSConfig contains the TLS configuration for a HelmChartProxy.
                 properties:
