--- a/config/crd/bases/addons.cluster.x-k8s.io_helmchartproxies.yaml
+++ b/config/crd/bases/addons.cluster.x-k8s.io_helmchartproxies.yaml
@@ -131,6 +131,38 @@ spec:
                 - key
                 - secret
                 type: object
+              installRolloutOptions:
+                description: |-
+                  RolloutStepSize is an opt-in feature that defines a step size during the
+                  initial rollout of HelmReleaseProxies on matching clusters. Once all
+                  rolled out HelmReleaseProxy resources are ready=true, the next batch of
+                  HelmReleaseProxy resources are reconciled. If undefined, will default to
+                  creating HelmReleaseProxy resources for all matching clusters.
+                  e.g. an int (5) or percentage of count of total matching clusters (25%)
+                properties:
+                  stepIncrement:
+                    anyOf:
+                    - type: integer
+                    - type: string
+                    x-kubernetes-int-or-string: true
+                  stepInit:
+                    anyOf:
+                    - type: integer
+                    - type: string
+                    description: |-
+                      RolloutStepSize is an opt-in feature that defines a step size during the
+                      initial rollout of HelmReleaseProxies on matching clusters. Once all
+                      rolled out HelmReleaseProxy resources are ready=true, the next batch of
+                      HelmReleaseProxy resources are reconciled. If undefined, will default to
+                      creating HelmReleaseProxy resources for all matching clusters.
+                      e.g. an int (5) or percentage of count of total matching clusters (25%)
+                    x-kubernetes-int-or-string: true
+                  stepLimit:
+                    anyOf:
+                    - type: integer
+                    - type: string
+                    x-kubernetes-int-or-string: true
+                type: object
               namespace:
                 description: |-
                   ReleaseNamespace is the namespace the Helm release will be installed on each selected
@@ -279,14 +311,29 @@ spec:
                   RepoURL is the URL of the Helm chart repository.
                   e.g. chart-path oci://repo-url/chart-name as repoURL: oci://repo-url and https://repo-url/chart-name as repoURL: https://repo-url
                 type: string
-              rolloutOptions:
-                description: |-
-                  RolloutStepSize is an opt-in feature that defines a step size during the
-                  initial rollout of HelmReleaseProxies on matching clusters. Once all
-                  rolled out HelmReleaseProxy resources are ready=true, the next batch of
-                  HelmReleaseProxy resources are reconciled. If undefined, will default to
-                  creating HelmReleaseProxy resources for all matching clusters.
-                  e.g. an int (5) or percentage of count of total matching clusters (25%)
+              tlsConfig:
+                description: TLSConfig contains the TLS configuration for a HelmChartProxy.
+                properties:
+                  caSecret:
+                    description: Secret is a reference to a Secret containing the
+                      TLS CA certificate at the key ca.crt.
+                    properties:
+                      name:
+                        description: name is unique within a namespace to reference
+                          a secret resource.
+                        type: string
+                      namespace:
+                        description: namespace defines the space within which the
+                          secret name must be unique.
+                        type: string
+                    type: object
+                    x-kubernetes-map-type: atomic
+                  insecureSkipTLSVerify:
+                    description: InsecureSkipTLSVerify controls whether the Helm client
+                      should verify the server's certificate.
+                    type: boolean
+                type: object
+              upgradeRolloutOptions:
                 properties:
                   stepIncrement:
                     anyOf:
@@ -310,28 +357,6 @@ spec:
                     - type: integer
                     - type: string
                     x-kubernetes-int-or-string: true
-                type: object
-              tlsConfig:
-                description: TLSConfig contains the TLS configuration for a HelmChartProxy.
-                properties:
-                  caSecret:
-                    description: Secret is a reference to a Secret containing the
-                      TLS CA certificate at the key ca.crt.
-                    properties:
-                      name:
-                        description: name is unique within a namespace to reference
-                          a secret resource.
-                        type: string
-                      namespace:
-                        description: namespace defines the space within which the
-                          secret name must be unique.
-                        type: string
-                    type: object
-                    x-kubernetes-map-type: atomic
-                  insecureSkipTLSVerify:
-                    description: InsecureSkipTLSVerify controls whether the Helm client
-                      should verify the server's certificate.
-                    type: boolean
                 type: object
               valuesTemplate:
                 description: |-
@@ -457,7 +482,12 @@ spec:
                 format: int64
                 type: integer
               rollout:
-                type: integer
+                properties:
+                  count:
+                    type: integer
+                  step_size:
+                    type: integer
+                type: object
             type: object
         type: object
     served: true
