things seemingly working out as expected

--- a/config/crd/bases/addons.cluster.x-k8s.io_helmchartproxies.yaml
+++ b/config/crd/bases/addons.cluster.x-k8s.io_helmchartproxies.yaml
@@ -485,7 +485,7 @@ spec:
                 properties:
                   count:
                     type: integer
-                  step_size:
+                  stepSize:
                     type: integer
                 type: object
             type: object
